--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ PORT=3000
 
 MONGODB_URI=mongodb://localhost:27017/tienda
 
-REDIST_HOST=
-REDIST_PORT=
+REDIS_HOST=localhost
+REDIS_PORT=6379
 REDIS_USERNAME=
 REDIS_PASSWORD=
 
