--- a/package.json
+++ b/package.json
@@ -2,21 +2,19 @@
   "name": "redis",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "",
-    "start": "nodemon"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module",
   "dependencies": {
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "mongoose": "^9.1.5",
-    "mongose": "^0.0.2-security",
     "nodemon": "^3.1.11",
     "redis": "^5.10.0"
   }
